# allegro

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  README.md  book.toml  docker-compose.yml  flake.nix
.github/workflows/: check.yml
apps/web/: README.md  index.html  package.json  tsconfig.json  wrangler.jsonc  wrangler.toml
apps/web/src/: App.tsx  config.ts  main.tsx
apps/web/src/api/: client.ts  types.ts
apps/web/src/components/: ChainedDemoPage.tsx  ConnectButton.tsx  NetworkStatus.tsx  PaymentForm.tsx  TxTracker.tsx
apps/web/src/components/layout/: AppShell.tsx  Header.tsx
apps/web/src/hooks/: useChainedDemo.ts  usePolling.ts
apps/web/src/lib/: fastPayTransport.ts  wagmi.config.ts
apps/web/src/styles/: tempo.css
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/demo/tests/: integration_flows.rs
crates/fastpay-backend/: Cargo.toml
crates/fastpay-backend/src/: lib.rs  main.rs  rest.rs  service.rs  state.rs  upstream.rs
crates/fastpay-backend/tests/: grpc_integration.rs
crates/fastpay-crypto/: Cargo.toml
crates/fastpay-crypto/src/: assembler.rs  ed25519.rs  hashing.rs  lib.rs  multi_cert_qc.rs
crates/fastpay-crypto/tests/: wasm_hash_vectors.rs
crates/fastpay-crypto/vectors/: hash_vectors.json  hash_vectors.ts
crates/fastpay-proto/: Cargo.toml  build.rs
crates/fastpay-proto/src/: convert.rs  lib.rs
crates/fastpay-sidecar/: Cargo.toml
crates/fastpay-sidecar-mock/: Cargo.toml
crates/fastpay-sidecar-mock/src/: lib.rs  mock_sidecar.rs  scenarios.rs
crates/fastpay-sidecar/src/: gossip.rs  lib.rs  main.rs  reth.rs  service.rs  state.rs
crates/fastpay-sidecar/tests/: grpc_integration.rs
crates/fastpay-types/: Cargo.toml
crates/fastpay-types/src/: error.rs  ids.rs  lib.rs  tempo_tx.rs  traits.rs
crates/fastpay-user-client/: Cargo.toml
crates/fastpay-user-client/src/: cert_manager.rs  client.rs  lib.rs  transport.rs  tx_builder.rs  wallet.rs
docs/: 00-background.md  01-architecture.md  02-user-client.md  03-backend.md  04-sidecar.md  05-tempo-integration.md  06-demo.md  architecture.md  backend.md  fastpay_execution_plan.md  phase1_handoff.md  sidecar.md  spec.md  tempo_integration.md  user_client.md  user_client_phase1.md  web_rest_contract.md
proto/: aggregator.proto  sidecar.proto  types.proto
src/: main.rs
work/: client_phase1_impl.md  q_and_a.md
working_docs/: user_client_phase1_handoff.md
