[workspace]
members = [
    "crates/fastpay-types",
    "crates/fastpay-crypto",
    "crates/fastpay-proto",
    "crates/fastpay-user-client",
    "crates/fastpay-sidecar-mock",
    "crates/demo",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures = "0.3"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
prost = "0.13"
prost-build = "0.13"
prost-types = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tonic = "0.12"
tonic-build = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[package]
name = "tempo-hackathon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Tempo Hackathon - Hello World Rust Project"

[dependencies]
