[package]
name = "demo"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fastpay-crypto = { path = "../fastpay-crypto" }
fastpay-sidecar-mock = { path = "../fastpay-sidecar-mock" }
fastpay-types = { path = "../fastpay-types" }
fastpay-user-client = { path = "../fastpay-user-client" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
