[package]
name = "fastpay-user-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
native = []
wasm = []

[dependencies]
async-trait.workspace = true
fastpay-proto = { path = "../fastpay-proto" }
fastpay-sidecar-mock = { path = "../fastpay-sidecar-mock" }
fastpay-types = { path = "../fastpay-types" }
futures.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tonic.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
