[package]
name = "fastpay-user-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
native = []
wasm = []

[dependencies]
async-trait.workspace = true
fastpay-crypto = { path = "../fastpay-crypto" }
fastpay-proto = { path = "../fastpay-proto" }
fastpay-sidecar-mock = { path = "../fastpay-sidecar-mock" }
fastpay-types = { path = "../fastpay-types" }
futures.workspace = true
prost.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
tonic.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
